--- a/pages/charmeleon.html
+++ b/pages/charmeleon.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Charmeleon</title>
+	</head>
+	<body>
+		<script src="../scripts/data.js"></script>
+		<script
+			src="../scripts/script.js"
+			onload="loadPokemon(charmeleon, document.body);
+        "
+		></script>
+	</body>
 </html>
