--- a/pages/charmeleon.html
+++ b/pages/charmeleon.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Charmeleon</title>
+
+		<link rel="stylesheet" href="../css/pokemon_style.css" />
 	</head>
 	<body>
 		<script src="../scripts/data.js"></script>
