--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 
 <body>
 
+    <ul>
+        <li class="btn balls">
+        </li>
+        <li class="btn balls"></li>
+        <li class="btn balls"></li>
+    </ul>
+
 
 
     <script src='https: //code.jquery.com/jquery-3.5.1.js' integrity='sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=' crossorigin='anonymous'></script>
-    <script scr='script.js'></script>
+    <script scr='script'></script>
 </body>
 
 </html>
