--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
     <link rel='stylesheet' href='css/style.css'>
 
-    <link rel='shortcut icon' href='pokedex.png' type='image/x-icon'>
+    <link rel='shortcut icon' href='assets/favicons/pokedex.png' type='image/x-icon'>
 </head>
 
 <body>
+    <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
 
     <ul>
         <li class="btn balls">
@@ -25,8 +26,6 @@
         <li class="btn balls"></li>
         <li class="btn balls"></li>
     </ul>
-
-    <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
 
 
     <script src='https: //code.jquery.com/jquery-3.5.1.js' integrity='sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=' crossorigin='anonymous'></script>
