--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
 </head>
 
 <body>
-    <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
+    <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
 
     <ul>
         <li class="btn balls">
+            <div class="upper"></div>
+            <div class="dot"></div>
+            <div class="bottom"></div>
         </li>
-        <li class="btn balls"></li>
-        <li class="btn balls"></li>
+        <li class="btn balls">
+            <div class="upper"></div>
+            <div class="dot"></div>
+            <div class="bottom"></div>
+        </li>
+        <li class="btn balls">
+            <div class="upper"></div>
+            <div class="dot"></div>
+            <div class="bottom"></div>
+        </li>
     </ul>
 
 
