added images for pokemon

--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
 
 </html>
 
-<!-- 
+<!-- Favicons
 // Link to Favicon : https://pokemon.fandom.com/wiki/Pok%C3%A9dex
 // Link to Charzard favicon: https://vignette.wikia.nocookie.net/pkmnshuffle/images/9/95/Charizard.png/revision/latest?cb=2017040719153
-// Link to Charmander: https://pkmnshuffle.fandom.com/wiki/Charmander
-// Link to Charmeleon: https://pkmnshuffle.fandom.com/wiki/Charmeleon -->
+// Link to Charmander favicon: https://pkmnshuffle.fandom.com/wiki/Charmander
+// Link to Charmeleon favicon: https://pkmnshuffle.fandom.com/wiki/Charmeleon -->
+
+<!--  Charecter for Home
+// Link to Charmander Charecter: https://forums.eu.square-enix.com/showthread.php?t=9088
+// Link to Charzard Chareceter: https://bulbapedia.bulbagarden.net/wiki/Charizard_(Pok%C3%A9mon)
+// Link to Charmeleon Charecter: https://bulbapedia.bulbagarden.net/wiki/Charmeleon_(Pok%C3%A9mon) -->
