Added card animations and fixed card css.

--- a/pages/charizard.html
+++ b/pages/charizard.html
@@ -14,5 +14,6 @@
 			onload="loadPokemon(charizard, document.body);
         "
 		></script>
+		<script src="../scripts/mouse_transform.js"></script>
 	</body>
 </html>
