--- a/pages/charmeleon.html
+++ b/pages/charmeleon.html
@@ -14,5 +14,6 @@
 			onload="loadPokemon(charmeleon, document.body);
         "
 		></script>
+		<script src="../scripts/mouse_transform.js"></script>
 	</body>
 </html>
