--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 </head>
 
 <body>
-    <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
+    <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
+
+    <div class="title">
+        <h1>Choose your pokemon?</h1>
+    </div>
 
     <ul>
         <li class="btn balls">
