added new Read.me info

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 </head>
 
 <body>
-    <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
-
     <ul>
         <li class="btn balls">
         </li>
@@ -33,7 +31,7 @@
 </body>
 
 </html>
-
+<!-- Credits Below -->
 <!-- Favicons
 // Link to Favicon : https://pokemon.fandom.com/wiki/Pok%C3%A9dex
 // Link to Charzard favicon: https://vignette.wikia.nocookie.net/pkmnshuffle/images/9/95/Charizard.png/revision/latest?cb=2017040719153
