added charizard and fixed font

--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-=======
     <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
 
-    <div class="title">
+    <!-- <div class="title"> -->
         <h1>Choose your pokemon?</h1>
-    </div>
+    <!-- </div> -->
 
->>>>>>> b22cba76e85c98f64c1d7c869c6207c9a6ff0a34
     <ul>
         <li class="btn balls">
             <div class="upper"></div>
@@ -62,3 +59,6 @@
 // Link to Charmander Charecter: https://forums.eu.square-enix.com/showthread.php?t=9088
 // Link to Charzard Chareceter: https://bulbapedia.bulbagarden.net/wiki/Charizard_(Pok%C3%A9mon)
 // Link to Charmeleon Charecter: https://bulbapedia.bulbagarden.net/wiki/Charmeleon_(Pok%C3%A9mon) -->
+
+<!-- Pokecards Images -->
+Link to Charzard Image: https://bleedingcool.com/games/pokemon-in-truly-feel-good-moment-man-opens-1st-edition-charizard/
