added all images of card

--- a/index.html
+++ b/index.html
@@ -62,3 +62,5 @@
 
 <!-- Pokecards Images -->
 Link to Charzard Image: https://bleedingcool.com/games/pokemon-in-truly-feel-good-moment-man-opens-1st-edition-charizard/
+Link to Charmander Image: https://lovepokemontcg.tumblr.com/post/175894224291/illus-tetsuya-koizumi-charmander-from-dragon
+Link to Charmeleon Image:https://poohadventures.fandom.com/wiki/Charmeleon
