fixed the Title shadow

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
     <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
 
-    <!-- <div class="title"> -->
-        <h1>Choose your pokemon?</h1>
-    <!-- </div> -->
+    <div class="title">
+        <h1>Choose Your Pokemon?</h1>
+    </div>
 
     <ul>
         <li class="btn balls">
@@ -61,6 +61,6 @@
 // Link to Charmeleon Charecter: https://bulbapedia.bulbagarden.net/wiki/Charmeleon_(Pok%C3%A9mon) -->
 
 <!-- Pokecards Images -->
-Link to Charzard Image: https://bleedingcool.com/games/pokemon-in-truly-feel-good-moment-man-opens-1st-edition-charizard/
+<!-- Link to Charzard Image: https://bleedingcool.com/games/pokemon-in-truly-feel-good-moment-man-opens-1st-edition-charizard/
 Link to Charmander Image: https://lovepokemontcg.tumblr.com/post/175894224291/illus-tetsuya-koizumi-charmander-from-dragon
-Link to Charmeleon Image:https://poohadventures.fandom.com/wiki/Charmeleon
+Link to Charmeleon Image:https://poohadventures.fandom.com/wiki/Charmeleon -->
