--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="ballWrapper">
-        <a href="charizard.html">
+        <a href="../JSON-Pokedex/pages/charizard.html">
             <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="250" height="250" fill="none"/>
                 <ellipse cx="125.5" cy="125" rx="117.5" ry="116" fill="black"/>
@@ -38,7 +38,7 @@
                 </svg>
 
         </a>
-        <a href="charmander.html">
+        <a href="../JSON-Pokedex/pages/charmeleon.html">
             <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="250" height="250" fill="none"/>
                 <ellipse cx="125.5" cy="125" rx="117.5" ry="116" fill="black"/>
@@ -51,7 +51,7 @@
                 </svg>
 
         </a>
-        <a href="charmeleon.html">
+        <a href="../JSON-Pokedex/pages/charmander.html">
             <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="250" height="250" fill="none"/>
                 <ellipse cx="125.5" cy="125" rx="117.5" ry="116" fill="black"/>
