--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 
     <title>Pokedex</title>
 
+    <link rel="stylesheet" href="css/bounce.css">
     <link rel='stylesheet' href='css/style.css'>
 
     <link rel='shortcut icon' href='assets/favicons/pokedex.png' type='image/x-icon'>
 </head>
 
 <body>
-    <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a>
+
+    <h1 class="title" style="color: yellow; --webkit-text-stroke: black 5px;">Choose your pokemon</h1>
 
     <ul>
-        <li class="btn balls">
+        <li class="ball ball-1">
+            <div class="upper"></div>
+            <div class="middle"></div>
+            <div class="bottom"></div>
         </li>
-        <li class="btn balls"></li>
-        <li class="btn balls"></li>
+        <li class="ball ball-2"></li>
+        <li class="ball ball-3"></li>
     </ul>
 
 
     <script src='https: //code.jquery.com/jquery-3.5.1.js' integrity='sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=' crossorigin='anonymous'></script>
-    <script scr='script'></script>
+    <script scr='#'></script>
 </body>
 
 </html>
