--- a/pages/charizard.html
+++ b/pages/charizard.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Charizard</title>
-
+		<link rel="shortcut icon" href="../assets/favicons/Charizard.png" type="image/x-icon">
 		<link rel="stylesheet" href="../css/pokemon_style.css" />
 	</head>
 	<body>
