--- a/pages/charmander.html
+++ b/pages/charmander.html
@@ -4,11 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Charmander</title>
-		<link rel="shortcut icon" href="../assets/favicons/Charmander.png" type="image/x-icon">
+		<link
+			rel="shortcut icon"
+			href="../assets/favicons/Charmander.png"
+			type="image/x-icon"
+		/>
 
 		<link rel="stylesheet" href="../css/pokemon_style.css" />
 	</head>
 	<body>
+		<p id="hover_help">hover over the card</p>
+
 		<button id="home" onclick="window.location.href = '../index.html';">
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
