--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<h1>Choose Your Pokémon!</h1>
 		</div>
 		<div class="ballWrapper">
-			<a href="/pages/charmander.html">
+			<a href="./pages/charmander.html">
 				<svg
 					width="250"
 					height="250"
@@ -65,7 +65,7 @@
 					/>
 				</svg>
 			</a>
-			<a href="/pages/charmeleon.html">
+			<a href="./pages/charmeleon.html">
 				<svg
 					width="250"
 					height="250"
@@ -99,7 +99,7 @@
 					/>
 				</svg>
 			</a>
-			<a href="/pages/charizard.html">
+			<a href="./pages/charizard.html">
 				<svg
 					width="250"
 					height="250"
