upadting pokeball animations

--- a/index.html
+++ b/index.html
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="author" content="KTD" />
-		<meta
-			name="Description"
-			content="[Put the description of your website here]"
-		/>
 
-		<meta property="og.image" content="images/MyCustomFavicon.png" />
-		<meta property="og.title" content="O mighty T" />
-		<meta property="og.description" content="Just a mighty T" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="KTD" />
+    <meta name="Description" content="[Put the description of your website here]" />
 
-		<title>Pokedex</title>
+    <meta property="og.image" content="images/MyCustomFavicon.png" />
+    <meta property="og.title" content="O mighty T" />
+    <meta property="og.description" content="Just a mighty T" />
 
-		<link rel="stylesheet" href="css/bounce.css" />
-		<link rel="stylesheet" href="css/style.css" />
+    <title>Pokedex</title>
 
-		<link
-			rel="shortcut icon"
-			href="assets/favicons/pokedex.png"
-			type="image/x-icon"
-		/>
-	</head>
+    <link rel="stylesheet" href="css/bounce.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-	<body>
-		<!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
+    <link rel="shortcut icon" href="assets/favicons/pokedex.png" type="image/x-icon" />
+</head>
 
-		<div class="title">
-			<h1>Choose Your Pokémon!</h1>
-		</div>
-		<div class="ballWrapper">
-			<a href="/pages/charmander.html">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
+<body>
+    <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
+
+    <div class="title">
+        <h1>Choose Your Pokémon!</h1>
+    </div>
+    <div class="ballWrapper">
+        <a href="/pages/charmander.html" id="pokeball">
+            <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<rect width="250" height="250" fill="none" />
 					<ellipse
 						cx="125.5"
@@ -64,15 +52,9 @@
 						fill="white"
 					/>
 				</svg>
-			</a>
-			<a href="/pages/charmeleon.html">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
+        </a>
+        <a href="/pages/charmeleon.html" id="pokeball">
+            <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<rect width="250" height="250" fill="none" />
 					<ellipse
 						cx="125.5"
@@ -98,15 +80,9 @@
 						fill="white"
 					/>
 				</svg>
-			</a>
-			<a href="/pages/charizard.html">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
+        </a>
+        <a href="/pages/charizard.html" id="pokeball">
+            <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<rect width="250" height="250" fill="none" />
 					<ellipse
 						cx="125.5"
@@ -132,17 +108,13 @@
 						fill="white"
 					/>
 				</svg>
-			</a>
-		</div>
-		<a href=""></a>
+        </a>
+    </div>
 
-		<script
-			src="https: //code.jquery.com/jquery-3.5.1.js"
-			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-			crossorigin="anonymous"
-		></script>
-		<script scr="#"></script>
-	</body>
+    <script src="https: //code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script scr="#"></script>
+</body>
+
 </html>
 <!-- Credits Below -->
 <!-- Favicons
