added new README FILE

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
 
 		<div class="title">
-			<h1>Choose Your Pokémon!</h1>
+			<h1>Choose Your PoKéMoN!</h1>
 		</div>
 		<div class="ballWrapper">
 			<a href="./pages/charmander.html" id="pokeball">
