--- a/index.html
+++ b/index.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="author" content="KTD" />
-		<meta
-			name="Description"
-			content="[Put the description of your website here]"
-		/>
 
-		<meta property="og.image" content="images/MyCustomFavicon.png" />
-		<meta property="og.title" content="O mighty T" />
-		<meta property="og.description" content="Just a mighty T" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="KTD" />
+    <meta name="Description" content="[Put the description of your website here]" />
 
-		<title>Pokedex</title>
+    <meta property="og.image" content="images/MyCustomFavicon.png" />
+    <meta property="og.title" content="O mighty T" />
+    <meta property="og.description" content="Just a mighty T" />
 
-		<link rel="stylesheet" href="css/bounce.css" />
-		<link rel="stylesheet" href="css/style.css" />
+    <title>Pokedex</title>
 
-		<link
-			rel="shortcut icon"
-			href="assets/favicons/pokedex.png"
-			type="image/x-icon"
-		/>
-	</head>
+    <link rel="stylesheet" href="css/bounce.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-	<body>
-		<!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
+    <link rel="shortcut icon" href="assets/favicons/pokedex.png" type="image/x-icon" />
+</head>
 
-<<<<<<< HEAD
 <body>
     <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
 
-    <div class="title">
-        <h1>Choose Your Pokémon!</h1>
-    </div>
-    <!-- <div class="chooseWrapper">
+    <body>
+        <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
+
+        <div class="title">
+            <h1>Choose Your Pokémon!</h1>
+        </div>
+        <!-- <div class="chooseWrapper">
         <img src="assets/images/ChooseHover.png" alt="">
         <img src="assets/images/ChooseHover.png" alt="">
         <img src="assets/images/ChooseHover.png" alt="">
@@ -42,8 +35,8 @@
 
 
 
-    <div class="imgWrapper">
-        <img class="picture hide effect" id="pokemon-1" src="Charmander1.png" " alt=" ">
+        <div class="imgWrapper">
+            <img class="picture hide effect" id="pokemon-1" src="Charmander1.png" " alt=" ">
 		<img class="picture hide effect " id="pokemon-2 " src="Charmeleon1.png " alt=" ">
 		<img class="picture hide effect " id="pokemon-3 " src="Charzard1.png " alt=" ">
 	</div>
@@ -52,21 +45,6 @@
         <a rel='pokemon-1' href="/pages/charmander.html " id="pokemon-1 " class="pokeball ">
             <svg width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
 					<rect width="250 " height="250 " fill="none " />
-=======
-		<div class="title">
-			<h1>Choose Your PoKéMoN!</h1>
-		</div>
-		<div class="ballWrapper">
-			<a href="./pages/charmander.html" id="pokeball">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
-					<rect width="250" height="250" fill="none" />
->>>>>>> eac260b68fd0a6d81c135dba417f4e6e3f8f89dc
 					<ellipse
 						cx="125.5 "
 						cy="125 "
@@ -77,7 +55,7 @@
 					<path
 						id="upper "
 						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
-            50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
+                50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
 						fill="#F60A4A "
 					/>
 					<path id="bottom "
@@ -92,23 +70,10 @@
 						fill="white "
 					/>
 				</svg>
-<<<<<<< HEAD
         </a>
         <a rel="pokemon-2 " href="/pages/charmeleon.html " id=" " class="pokeball ">
             <svg width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
 					<rect width="250 " height="250 " fill="none " />
-=======
-			</a>
-			<a href="./pages/charmeleon.html" id="pokeball">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
-					<rect width="250" height="250" fill="none" />
->>>>>>> eac260b68fd0a6d81c135dba417f4e6e3f8f89dc
 					<ellipse
 						cx="125.5 "
 						cy="125 "
@@ -119,7 +84,7 @@
 					<path
 						id="upper "
 						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
-            50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
+                50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
 						fill="#F60A4A "
 					/>
 					<path id="bottom "
@@ -134,24 +99,11 @@
 						fill="white "
 					/>
 				</svg>
-<<<<<<< HEAD
         </a>
         <a href="/pages/charizard.html " id=" " 
 		rel = "pokemon-3 "class="pokeball ">
             <svg rel="pokemon-3 " width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
 					<rect width="250 " height="250 " fill="none " />
-=======
-			</a>
-			<a href="./pages/charizard.html" id="pokeball">
-				<svg
-					width="250"
-					height="250"
-					viewBox="0 0 250 250"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
-				>
-					<rect width="250" height="250" fill="none" />
->>>>>>> eac260b68fd0a6d81c135dba417f4e6e3f8f89dc
 					<ellipse
 						cx="125.5 "
 						cy="125 "
@@ -163,7 +115,7 @@
 						id="upper " 
 						rel = "pokemon-3 "
 						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
-            50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
+                50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
 						fill="#F60A4A "
 					/>
 					<path id="bottom "
@@ -180,7 +132,6 @@
 						fill="white "
 					/>
 				</svg>
-<<<<<<< HEAD
         </a>
     </div>
 
@@ -188,17 +139,13 @@
         <script src=" https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js "></script>
         <script src="scripts/ballAnimation.js "></script>
 </body>
-=======
-			</a>
-		</div>
->>>>>>> eac260b68fd0a6d81c135dba417f4e6e3f8f89dc
 
 		<script
-			src="https: //code.jquery.com/jquery-3.5.1.js"
+			src="https: //code.jquery.com/jquery-3.5.1.js "
 			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-			crossorigin="anonymous"
+			crossorigin=" anonymous "
 		></script>
-		<script scr="#"></script>
+		<script scr="# "></script>
 	</body>
 </html>
 <!-- Credits Below -->
