--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
         <div class="title">
             <h1>Choose Your Pokémon!</h1>
         </div>
-        <!-- <div class="chooseWrapper">
-        <img src="assets/images/ChooseHover.png" alt="">
-        <img src="assets/images/ChooseHover.png" alt="">
-        <img src="assets/images/ChooseHover.png" alt="">
-    </div> -->
+        <div class="chooseWrapper">
+            <img class="picture hover" id="pokemon-1 " src="assets/images/ChooseHover.png" alt="">
+            <img class="picture hover" id="pokemon-2" src="assets/images/ChooseHover.png" alt="">
+            <img class="picture hover" id="pokemon-3" src="assets/images/ChooseHover.png" alt="">
+        </div>
 
 
 
         <div class="imgWrapper">
             <img class="picture hide effect" id="pokemon-1" src="Charmander1.png" " alt=" ">
-		<img class="picture hide effect " id="pokemon-2 " src="Charmeleon1.png " alt=" ">
-		<img class="picture hide effect " id="pokemon-3 " src="Charzard1.png " alt=" ">
-	</div>
+			<img class="picture hide effect " id="pokemon-2 " src="Charmeleon1.png " alt=" ">
+			<img class="picture hide effect " id="pokemon-3 " src="Charzard1.png " alt=" ">
+		</div>
+
     <div class="ballWrapper ">
 
         <a rel='pokemon-1' href="/pages/charmander.html " id="pokemon-1 " class="pokeball ">
