--- a/index.html
+++ b/index.html
@@ -28,126 +28,97 @@
             <h1>Choose Your Pokémon!</h1>
         </div>
         <div class="chooseWrapper">
-            <img class="picture hover" id="pokemon-1 " src="assets/images/ChooseHover.png" alt="">
-            <img class="picture hover" id="pokemon-2" src="assets/images/ChooseHover.png" alt="">
-            <img class="picture hover" id="pokemon-3" src="assets/images/ChooseHover.png" alt="">
+            <img class="picture2 hover" id="hand-1" src="assets/images/ChooseHover.png" alt="white hand pointing down">
+            <img class="picture2 hover" id="hand-2" src="assets/images/ChooseHover.png" alt="white hand pointing down">
+            <img class="picture2 hover" id="hand-3" src="assets/images/ChooseHover.png" alt="white hand pointing down">
         </div>
 
 
 
         <div class="imgWrapper">
-            <img class="picture hide effect" id="pokemon-1" src="Charmander1.png" " alt=" ">
-			<img class="picture hide effect " id="pokemon-2 " src="Charmeleon1.png " alt=" ">
-			<img class="picture hide effect " id="pokemon-3 " src="Charzard1.png " alt=" ">
-		</div>
+            <img class="picture hide effect" id='pokemon-1' src="Charmander1.png" alt="little Charmander">
+            <img class="picture hide effect" id='pokemon-2' src=" Charmeleon1.png " alt="teen Charmeleon">
+            <img class="picture hide effect" id='pokemon-3' src=" Charzard1.png " alt="Adult Charzard">
+        </div>
 
-    <div class="ballWrapper ">
+        <!-- pokemon SVG -->
+        <div class=" ballWrapper ">
 
-        <a rel='pokemon-1' href="/pages/charmander.html " id="pokemon-1 " class="pokeball ">
-            <svg width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
-					<rect width="250 " height="250 " fill="none " />
-					<ellipse
-						cx="125.5 "
-						cy="125 "
-						rx="117.5 "
-						ry="116 "
-						fill="black "
-					/>
-					<path
-						id="upper "
-						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
+            <a rel='1' href=" /pages/charmander.html " id='pokemon-1' class=" pokeball ">
+                <svg width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
+					<rect width=" 250 " height=" 250 " fill=" none " />
+					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
+					<path id=" upper "
+						d=" M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
                 50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
-						fill="#F60A4A "
-					/>
-					<path id="bottom "
-						d="M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
-						fill="#F5F5F5 "
-					/>
-					<circle cx="125 " cy="126 " r="50 " fill="black " />
-					<circle cx="125 " cy="126 " r="40 " fill="white " />
-					<circle cx="125 " cy="126 " r="30 " fill="black " />
-					<path id="centerCircle "
-						d="M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
-						fill="white "
-					/>
+						fill=" #F60A4A " />
+					<path id=" bottom "
+						d=" M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
+						fill=" #F5F5F5 " />
+					<circle cx=" 125 " cy=" 126 " r=" 50 " fill=" black " />
+					<circle cx=" 125 " cy=" 126 " r=" 40 " fill=" white " />
+					<circle cx=" 125 " cy=" 126 " r=" 30 " fill=" black " />
+					<path id=" centerCircle "
+						d=" M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
+						fill=" white " />
 				</svg>
-        </a>
-        <a rel="pokemon-2 " href="/pages/charmeleon.html " id=" " class="pokeball ">
-            <svg width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
-					<rect width="250 " height="250 " fill="none " />
-					<ellipse
-						cx="125.5 "
-						cy="125 "
-						rx="117.5 "
-						ry="116 "
-						fill="black "
-					/>
-					<path
-						id="upper "
-						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
+            </a>
+            <!--  -->
+            <a rel='2' href=" /pages/charmeleon.html " id='pokemon-2' class=" pokeball ">
+                <svg width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
+					<rect width=" 250 " height=" 250 " fill=" none " />
+					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
+					<path id=" upper "
+						d=" M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
                 50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
-						fill="#F60A4A "
-					/>
-					<path id="bottom "
-						d="M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
-						fill="#F5F5F5 "
-					/>
-					<circle cx="125 " cy="126 " r="50 " fill="black " />
-					<circle cx="125 " cy="126 " r="40 " fill="white " />
-					<circle cx="125 " cy="126 " r="30 " fill="black " />
-					<path id="centerCircle "
-						d="M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
-						fill="white "
-					/>
+						fill=" #F60A4A " />
+					<path id=" bottom "
+						d=" M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
+						fill=" #F5F5F5 " />
+					<circle cx=" 125 " cy=" 126 " r=" 50 " fill=" black " />
+					<circle cx=" 125 " cy=" 126 " r=" 40 " fill=" white " />
+					<circle cx=" 125 " cy=" 126 " r=" 30 " fill=" black " />
+					<path id=" centerCircle "
+						d=" M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
+						fill=" white " />
 				</svg>
-        </a>
-        <a href="/pages/charizard.html " id=" " 
-		rel = "pokemon-3 "class="pokeball ">
-            <svg rel="pokemon-3 " width="250 " height="250 " viewBox="0 0 250 250 " fill="none " xmlns="http://www.w3.org/2000/svg ">
-					<rect width="250 " height="250 " fill="none " />
-					<ellipse
-						cx="125.5 "
-						cy="125 "
-						rx="117.5 "
-						ry="116 "
-						fill="black "
-					/>
-					<path
-						id="upper " 
-						rel = "pokemon-3 "
-						d="M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
+            </a>
+            <!--  -->
+            <a rel='3' href=" /pages/charizard.html " id='pokemon-3' class=" pokeball ">
+                <svg rel=" pokemon-3 " width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
+					<rect width=" 250 " height=" 250 " fill=" none " />
+					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
+					<path id=" upper " rel=" pokemon-3 "
+						d=" M248 122.5C248 107.595 244.831 92.8359 238.675 79.0654C232.519 65.295 223.496 52.7828 212.121 42.2434C200.745 31.7039 187.241 23.3436 172.379 17.6397C157.516 11.9358 141.587 9 125.5 9C109.413 9 93.4837 11.9358 78.6213 17.6397C63.7589 23.3436
                 50.2546 31.7039 38.8794 42.2434C27.5042 52.7828 18.481 65.295 12.3248 79.0654C6.16855 92.8359 3 107.595 3 122.5L125.5 122.5H248Z "
-						fill="#F60A4A "
-					/>
-					<path id="bottom "
-					rel = "pokemon-3 "
-						d="M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
-						fill="#F5F5F5 "
-					/>
-					<circle cx="125 " cy="126 " r="50 " fill="black " />
-					<circle cx="125 " cy="126 " r="40 " fill="white " />
-					<circle cx="125 " cy="126 " r="30 " fill="black " />
-					<path id="centerCircle "
-					rel = "pokemon-3 "
-						d="M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
-						fill="white "
-					/>
+						fill=" #F60A4A " />
+					<path id=" bottom " rel=" pokemon-3 "
+						d=" M248 133.5C248 162.011 235.094 189.354 212.121 209.514C189.147 229.674 157.989 241 125.5 241C93.011 241 61.8526 229.674 38.8794 209.514C15.9062 189.354 3 162.011 3 133.5L125.5 133.5H248Z "
+						fill=" #F5F5F5 " />
+					<circle cx=" 125 " cy=" 126 " r=" 50 " fill=" black " />
+					<circle cx=" 125 " cy=" 126 " r=" 40 " fill=" white " />
+					<circle cx=" 125 " cy=" 126 " r=" 30 " fill=" black " />
+					<path id=" centerCircle " rel=" pokemon-3 "
+						d=" M150 126C150 139.807 138.807 151 125 151C111.193 151 100 139.807 100 126C100 112.193 111.193 101 125 101C138.807 101 150 112.193 150 126Z "
+						fill=" white " />
 				</svg>
-        </a>
-    </div>
+            </a>
+        </div>
 
-    <script src="https: //code.jquery.com/jquery-3.<script src="></script>
+        <!-- pokemon SVG -->
+
+
+
+
+        <script src=" https: //code.jquery.com/jquery-3.<script src="></script>
         <script src=" https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js "></script>
-        <script src="scripts/ballAnimation.js "></script>
+        <script src=" scripts/ballAnimation.js "></script>
+    </body>
+
+    <script src=" https: //code.jquery.com/jquery-3.5.1.js " integrity=" sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin=" anonymous "></script>
+    <script scr=" # "></script>
 </body>
 
-		<script
-			src="https: //code.jquery.com/jquery-3.5.1.js "
-			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-			crossorigin=" anonymous "
-		></script>
-		<script scr="# "></script>
-	</body>
 </html>
 <!-- Credits Below -->
 <!-- Favicons
