--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 
         <div class="imgWrapper">
-            <img class="picture hide effect" id='pokemon-1' src="Charmander1.png" alt="little Charmander">
-            <img class="picture hide effect" id='pokemon-2' src=" Charmeleon1.png " alt="teen Charmeleon">
-            <img class="picture hide effect" id='pokemon-3' src=" Charzard1.png " alt="Adult Charzard">
+            <img class="picture hide effect" id='pokemon-1' src="assets/images/Charmander1.png" alt="little Charmander">
+            <img class="picture hide effect" id='pokemon-2' src="assets/images/Charmeleon1.png " alt="teen Charmeleon">
+            <img class="picture hide effect" id='pokemon-3' src="assets/images/Charzard1.png" alt="Adult Charzard">
         </div>
 
         <!-- pokemon SVG -->
