--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- <a href="#"><img src="https://fontmeme.com/permalink/210410/0f9d80ea447c4c53db3b46c707cff679.png" alt="pokemon-font" border="0"></a> -->
 
         <div class="title">
-            <h1>Choose Your Pokémon!</h1>
+            <h1>Choose your Pokémon!</h1>
         </div>
         <div class="chooseWrapper">
             <img class="picture2 hover" id="hand-1" src="assets/images/ChooseHover.png" alt="white hand pointing down">
@@ -107,17 +107,10 @@
 
         <!-- pokemon SVG -->
 
-
-
-
         <script src=" https: //code.jquery.com/jquery-3.<script src="></script>
         <script src=" https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js "></script>
         <script src=" scripts/ballAnimation.js "></script>
     </body>
-
-    <script src=" https: //code.jquery.com/jquery-3.5.1.js " integrity=" sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin=" anonymous "></script>
-    <script scr=" # "></script>
-</body>
 
 </html>
 <!-- Credits Below -->
