fixed page links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- pokemon SVG -->
         <div class=" ballWrapper ">
 
-            <a rel='1' href=" /pages/charmander.html " id='pokemon-1' class=" pokeball ">
+            <a rel='1' href='/pages/charmander.html' id='pokemon-1' class=" pokeball ">
                 <svg width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
 					<rect width=" 250 " height=" 250 " fill=" none " />
 					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
@@ -64,7 +64,7 @@
 				</svg>
             </a>
             <!--  -->
-            <a rel='2' href=" /pages/charmeleon.html " id='pokemon-2' class=" pokeball ">
+            <a rel='2' href='/pages/charmeleon.html' id='pokemon-2' class=" pokeball ">
                 <svg width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
 					<rect width=" 250 " height=" 250 " fill=" none " />
 					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
@@ -84,7 +84,7 @@
 				</svg>
             </a>
             <!--  -->
-            <a rel='3' href=" /pages/charizard.html " id='pokemon-3' class=" pokeball ">
+            <a rel='3' href='/pages/charizard.html' id='pokemon-3' class=" pokeball ">
                 <svg rel=" pokemon-3 " width=" 250 " height=" 250 " viewBox=" 0 0 250 250 " fill=" none " xmlns=" http://www.w3.org/2000/svg ">
 					<rect width=" 250 " height=" 250 " fill=" none " />
 					<ellipse cx=" 125.5 " cy=" 125 " rx=" 117.5 " ry=" 116 " fill=" black " />
